--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,16 +13,19 @@
     "@headlessui/react": "^2.2.2",
     "@heroicons/react": "^1.0.6",
     "@hookform/resolvers": "^5.0.1",
+    "@reduxjs/toolkit": "^2.8.1",
     "@tailwindcss/vite": "^4.1.5",
     "axios": "^1.9.0",
     "formik": "^2.4.6",
     "headlessui": "^0.0.0",
     "heroicons": "^2.2.0",
+    "lucide-react": "^0.509.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.56.2",
     "react-icons": "^5.5.0",
     "react-lazy-load-image-component": "^1.6.3",
+    "react-redux": "^9.2.0",
     "react-router-dom": "^7.5.3",
     "react-toastify": "^11.0.5",
     "tailwindcss": "^4.1.5",
